objects/Step_Forward_Job_Placement__c.object
<CustomObject>
    <fields>
        <fullName>Step_Forward_Placement_Status__c</fullName>
        <label>Step Forward Placement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Invited to interview</fullName>
                </value>
                <value>
                    <fullName>Did not attend - Empl</fullName>
                </value>
                <value>
                    <fullName>Did not attend - Assoc</fullName>
                </value>
                <value>
                    <fullName>Attended, Successful - Job Offer</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful - not offered</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful - Empl not accepted</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful - YP not accepted</fullName>
                </value>
                <value>
                    <fullName>Contracts started</fullName>
                </value>
                <value>
                    <fullName>Contracts completed</fullName>
                </value>
                <value>
                    <fullName>Withdrawal of Associate - unmatched</fullName>
                </value>
                <value>
                    <fullName>Withdrawal of Employer - unmatched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_Forward_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Forward Survey</label>
        <referenceTo>Step_Forward_Survey__c</referenceTo>
        <relationshipLabel>Step Forward Job Placements</relationshipLabel>
        <relationshipName>Step_Forward_Job_Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Team__c</fullName>
        <label>Step Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adams</fullName>
                </value>
                <value>
                    <fullName>Malala</fullName>
                </value>
                <value>
                    <fullName>Folarin</fullName>
                </value>
                <value>
                    <fullName>Ashton</fullName>
                </value>
                <value>
                    <fullName>Simmonds</fullName>
                </value>
                <value>
                    <fullName>Kato</fullName>
                </value>
                <value>
                    <fullName>Bates</fullName>
                </value>
                <value>
                    <fullName>Hodgson</fullName>
                </value>
                <value>
                    <fullName>Ralph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tutor__c</fullName>
        <label>Tutor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <defaultValue>&quot;One day a week (exact day and time to be confirmed in writing between the parties)&quot;</defaultValue>
        <inlineHelpText>Previously known as Wave</inlineHelpText>
        <label>Training Day</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>matchable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>matchable</label>
        <type>Checkbox</type>
    </fields>
    <label>Step Forward Job Placement</label>
    <listViews>
        <fullName>AOIFE_ALL_contract_tracking</fullName>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>Pathway__c</columns>
        <columns>Associate__c</columns>
        <columns>Employer__c</columns>
        <columns>Step_Forward_Job_Name__c</columns>
        <columns>Matching_Notes__c</columns>
        <columns>Employer_Contact_Name__c</columns>
        <columns>Date_Learning_Agreement_sent_to_employer__c</columns>
        <columns>Date_Learning_Agreement_returned_frm_Emp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>equals</operation>
            <value>Contracts started,Contracts completed,&quot;Attended, Successful - Job Offer&quot;</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000001</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2015 12:00 AM</value>
        </filters>
        <label>MATCH C2 Employer Learning Agreement</label>
    </listViews>
    <listViews>
        <fullName>Barometer_email_send1</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Send_Barometer_Email__c</columns>
        <columns>Date_Barometer_Survey_Sent__c</columns>
        <columns>Date_Barometer_Survey_Reminder_Sent__c</columns>
        <columns>Month_and_Year_of_SF_Barometer__c</columns>
        <columns>Date_Barometer_Survey_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>equals</operation>
            <value>Contracts started,&quot;Attended, Successful - Job Offer&quot;,Contracts completed</value>
        </filters>
        <filters>
            <field>Contract_End_Date__c</field>
            <operation>lessThan</operation>
            <value>12/31/2016</value>
        </filters>
        <label>Barometer email send</label>
    </listViews>
    <listViews>
        <fullName>General_Information_Form_Tracking</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Associate_First_Name__c</columns>
        <columns>Associate_Lastname__c</columns>
        <columns>Send_General_Information_Form__c</columns>
        <columns>Date_General_Info_form_sent_to_Associate__c</columns>
        <columns>Date_General_Info_returned_from_Assoc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>notContain</operation>
            <value>Unsuccessful - YP not accepted,Withdrawal of Associate - unmatched,Withdrawal,U</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Associate_First_Name__c</field>
            <operation>notEqual</operation>
            <value>Rohema</value>
        </filters>
        <filters>
            <field>Associate_Lastname__c</field>
            <operation>notEqual</operation>
            <value>SloanTEST</value>
        </filters>
        <label>General Information Form Tracking</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_AM_TRACKER</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND (6 OR 7) AND 8</booleanFilter>
        <columns>NAME</columns>
        <columns>Final_QC_Check__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Pathway__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Associate__c</columns>
        <columns>Employer__c</columns>
        <columns>Step_Forward_Placement_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000347</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000366</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawal of Associate - unmatched,Withdrawal of Employer - unmatched</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>notEqual</operation>
            <value>Unsuccessful - YP not accepted</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Joe Public TEST</value>
        </filters>
        <label>MATCH C3 AM TRACKER</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Agreement_MB_Version</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pathway__c</columns>
        <columns>Associate__c</columns>
        <columns>Employer__c</columns>
        <columns>Step_Forward_Placement_Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Agreed_Fee_for_Employer__c</columns>
        <columns>Block_Training_dates__c</columns>
        <columns>Registered_Charity_Number__c</columns>
        <columns>Registered_Company_Number__c</columns>
        <columns>Registered_Organisation_Address__c</columns>
        <columns>Registered_Organisation_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000347</value>
        </filters>
        <label>MATCH C3 Agreement (MB Version)</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Agreement_check_list2</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND (6 OR 7) AND 8</booleanFilter>
        <columns>NAME</columns>
        <columns>Final_QC_Check__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Pathway__c</columns>
        <columns>Associate__c</columns>
        <columns>Employer__c</columns>
        <columns>Step_Forward_Placement_Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Date_Learning_Agreement_created__c</columns>
        <columns>Date_Step_Forward_Agreement_created__c</columns>
        <columns>Block_Training_dates__c</columns>
        <columns>Registered_Charity_Number__c</columns>
        <columns>Registered_Company_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000347</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000366</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawal of Associate - unmatched,Withdrawal of Employer - unmatched</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>notEqual</operation>
            <value>Unsuccessful - YP not accepted</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Joe Public TEST</value>
        </filters>
        <label>MATCH C3 Agreement check list</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_EYE_YPs_who_need_DBS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND (6 OR 7) AND 8 AND 9</booleanFilter>
        <columns>NAME</columns>
        <columns>Final_QC_Check__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Pathway__c</columns>
        <columns>Associate__c</columns>
        <columns>Employer__c</columns>
        <columns>Step_Forward_Placement_Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Date_Learning_Agreement_created__c</columns>
        <columns>Date_Step_Forward_Agreement_created__c</columns>
        <columns>Block_Training_dates__c</columns>
        <columns>Registered_Charity_Number__c</columns>
        <columns>Registered_Company_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000347</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000366</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawal of Associate - unmatched,Withdrawal of Employer - unmatched</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>notEqual</operation>
            <value>Unsuccessful - YP not accepted</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Joe Public TEST</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>Early Years Education</value>
        </filters>
        <label>MATCH C3 EYE YPs who need DBS</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Time_lag_event_to_offer</fullName>
        <columns>NAME</columns>
        <columns>Final_QC_Check__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>Event_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pathway__c</columns>
        <columns>Associate__c</columns>
        <columns>Step_Forward_Placement_Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000347</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000366</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <label>MATCH C3 Time lag event to offer</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Withdrawn</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND (6 OR 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Final_QC_Check__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Contracting_Status__c</columns>
        <columns>Pathway__c</columns>
        <columns>Associate__c</columns>
        <columns>Employer__c</columns>
        <columns>Step_Forward_Placement_Status__c</columns>
        <columns>Date_Learning_Agreement_created__c</columns>
        <columns>Date_Step_Forward_Agreement_created__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000347</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000366</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>contains</operation>
            <value>Withdrawal</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>contains</operation>
            <value>not accepted</value>
        </filters>
        <label>MATCH C3 Withdrawn or not accepted</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_eye_matched</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND (6 OR 7) AND 8 AND 9</booleanFilter>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Final_QC_Check__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Pathway__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Employer__c</columns>
        <columns>Step_Forward_Placement_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000347</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000366</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawal of Associate - unmatched,Withdrawal of Employer - unmatched</value>
        </filters>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>notEqual</operation>
            <value>Unsuccessful - YP not accepted</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Joe Public TEST</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>Early Years Education</value>
        </filters>
        <label>MATCH C3 eye matched</label>
    </listViews>
    <listViews>
        <fullName>Matt_Connolly_YP_Details</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>Associate__c</columns>
        <columns>Associate_email__c</columns>
        <columns>Pathway__c</columns>
        <columns>DOB_Check__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>equals</operation>
            <value>&quot;Attended, Successful - Job Offer&quot;,Contracts started,Contracts completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>10/6/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Matt Connolly YP Details</label>
    </listViews>
    <listViews>
        <fullName>PAIGE_YP_BKSB_GIF_returns</fullName>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>Pathway__c</columns>
        <columns>Associate__c</columns>
        <columns>Employer__c</columns>
        <columns>Step_Forward_Job_Name__c</columns>
        <columns>Date_General_Info_form_sent_to_Associate__c</columns>
        <columns>Date_General_Info_returned_from_Assoc__c</columns>
        <columns>Date_BKSB_Login_sent_to_Associate__c</columns>
        <columns>Date_BKSB_completed_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>equals</operation>
            <value>Contracts started,Contracts completed,&quot;Attended, Successful - Job Offer&quot;</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFM-0000001</value>
        </filters>
        <label>PAIGE YP BKSB/GIF returns</label>
    </listViews>
    <listViews>
        <fullName>SIAN_YP_Employer_withdrawn_after_match</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>Associate__c</columns>
        <columns>Associate_email__c</columns>
        <columns>Pathway__c</columns>
        <columns>Employer__c</columns>
        <columns>Date_General_Info_form_sent_to_Associate__c</columns>
        <columns>Date_General_Info_returned_from_Assoc__c</columns>
        <columns>Date_Learning_Agreement_sent_to_YP__c</columns>
        <columns>Date_Learning_Agreement_returned_from_YP__c</columns>
        <columns>Date_Code_of_Conduct_sent_to_Associate__c</columns>
        <columns>Date_Code_of_Conduct_returned_frm_Assoc__c</columns>
        <columns>Date_BKSB_Login_sent_to_Associate__c</columns>
        <columns>Date_BKSB_completed_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Step_Forward_Placement_Status__c</field>
            <operation>equals</operation>
            <value>Withdrawal of Associate - unmatched,Withdrawal of Employer - unmatched</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>10/6/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>SIAN YP/Employer withdrawn after match</label>
    </listViews>
    <nameField>
        <displayFormat>SFM-{0000000}</displayFormat>
        <label>Step Forward Placement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Forward Job Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>